Changes for 1.7.3

 - [DEV-137] updated French translation. Thanks to alixen (Richlv)

Changes for 1.7.2

 - [DEV-430] added map labels macro {TRIGGERS.UNACK} (Sasha)
 - [DEV-430] added notification macro {TRIGGER.EVENTS.UNACK} (Sasha)
 - [ZBX-1095] fixed "Link to template" operation for discovered hosts (Sasha)
 - [ZBX-1015] added support of LVM devices for system.swap.in/out under Linux. Thanks to Takanori Suzuki (Sasha)
 - [DEV-429] added support of system.cpu.switches under Linux 2.4/2.6 (Sasha)
 - [DEV-413] fixed first parameter in system.cpu.util key for Linux (all; 0..n) (Sasha)
 - [DEV-411] improved performance of trends module (Sasha)
 - [DEV-428] added new TELNET check 'telnet.run[]' (Sasha)
 - [DEV-428] added new SSH check 'ssh.run[]' (Sasha)

Changes for 1.7.1

 - [DEV-339] added internal check zabbix[wcache,*] for cache module (Sasha)
 - [ZBX-1071] move Zabbix client utilities from sbin to bin (Richlv)

Changes for 1.7.0

 - [DEV-333] added configuration data cache module (Sasha)
 - [DEV-427] frontend is PHP 5.3.0 compatible (Aly)
 - [ZBX-1034] fixed maps tooltip url view (Aly)
 - [ZBX-899] added "Show last" to "Status of triggers" events filter (Aly)
 - [ZBX-924] added check for not empty resource (Aly)
 - [DEV-310] improvements in graph visualisation and time line scrolling (Aly)
 - [DEV-357] modified oracle schema for support of Unicode (Sasha)
 - [ZBX-1046] add DBPort description; note that socket is used for MySQL if DBHost is localhost (Richlv)
 - [DEV-411] database cache is permanently enabled (Sasha)
 - [ZBX-482] fix incorrect MySQL userparameter keys in template (Richlv)
 - [ZBX-298] fix missing item parameter descriptions and examples; unify active/passive item descriptions (Richlv)
 - [DEV-420] fixed "Add host" operation for auto-discovered devices (Sasha)
 - [DEV-423] added filtering of the Windows Event Log by Type, Source and Event ID on the server side (Dmitry)